--- a/index.html
+++ b/index.html
@@ -1,5 +1,9 @@
 <html>
+    <head>
+        <link href="/css/main.css" rel="stylesheet">
+    </head>
     <body>
         <h1>Hey !</h1>
     </body>
+    <script src="/js/main.js"></script>
 </html>
