--- a/index.html
+++ b/index.html
@@ -3,7 +3,17 @@
         <link href="/css/main.css" rel="stylesheet">
     </head>
     <body>
-        <h1>Hey !</h1>
+        <div id="crt">
+            <div id="screen">
+                <div id="wrapper">
+                    <div id="interlace"></div>
+                    <div id="scanline"></div>
+                    <div id="envelope">
+                        <div id="terminal"></div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </body>
     <script src="/js/main.js"></script>
 </html>
