--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
     <head>
+        <title>Who am I ? I'm Raphaël Deschler</title>
         <link href="/css/main.css" rel="stylesheet">
     </head>
     <body>
